Config ESLint, Prettier and EditotConfig

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,11 +20,16 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
     "import/extensions": [
       "error",
       "ignorePackages",
       {
-        "ts": "never"
+        "ts": "never",
+        "tsx": "never"
       }
     ]
   },
