--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "@typescript-eslint/no-unused-vars": ["error"],
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
-    "@typescript-eslint/camelcase": "off",
+    "camelcase": "off",
+    "@typescript-eslint/camelcase": ["warn"],
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
